--- a/.settings/com.google.gdt.eclipse.core.prefs
+++ b/.settings/com.google.gdt.eclipse.core.prefs
@@ -1,3 +1,5 @@
-#Fri Oct 09 22:47:11 PDT 2009
+#Sun Jul 25 15:13:24 PDT 2010
 eclipse.preferences.version=1
 jarsExcludedFromWebInfLib=
+warSrcDir=war
+warSrcDirIsOutput=true
