--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-xmlns="http://java.sun.com/xml/ns/javaee"
-xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
-http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
+<!DOCTYPE web-app PUBLIC
+ "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
+ "http://java.sun.com/dtd/web-app_2_3.dtd">
+
+<web-app xmlns="http://java.sun.com/xml/ns/javaee" version="2.5">
 	<servlet>
 		<servlet-name>AuntRosie</servlet-name>
 		<servlet-class>org.andrewhitchcock.auntrosie.AuntRosieRobotServlet</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>AuntRosie</servlet-name>
-		<url-pattern>/_wave/robot/jsonrpc</url-pattern>
+		<url-pattern>/_wave/*</url-pattern>
 	</servlet-mapping>
 </web-app>
